--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Alan bebido E V",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "express": "^5.1.0",
     "multer": "^2.0.1",
